# ssgnc

./: CGIProgram.md  COPYING  Introduction.md  Makefile.am  Makefile.in  ProjectHome.md  README  configure  configure.ac  ssgnc-build-index.sh  ssgnc-gen-cgi.pl  ssgnc-index.sh
branches/ssgnc-0.0.1/: Makefile.in  configure  configure.ac  ssgnc-index.sh
branches/ssgnc-0.0.1/src/: build-dic.cc  ssgnc-find.cc
branches/ssgnc-0.0.2/: Makefile.am  configure  ssgnc-index.sh
branches/ssgnc-0.0.2/src/: build-index.cc  merge-index.cc
branches/ssgnc-0.0.2/src/ssgnc/: file-mapper.h  merger.h  timer.h
branches/ssgnc-0.10-alpha/: README.ja
branches/ssgnc-0.10-alpha/html/: ngram-en-help.html  ngram-en.html
branches/ssgnc-0.10-alpha/licenses/: License-ja.txt
branches/ssgnc-0.10-alpha/srcs/: Makefile  build-vocab-da.cpp  byte-writer.h  cgi-request.h  index-vocab.cpp  key-sort.sh  key-writer.h  line-reader.h  merge-index.cpp  ngram-index.sh  unit-type.h  vocab-table.h
branches/ssgnc-0.2.0/: Makefile.in  configure.ac
branches/ssgnc-0.2.0/html/: ssgnc-en.html  ssgnc-ja.html
branches/ssgnc-0.2.0/src/: Makefile.am  build-db.cc  build-vocab-dic.cc  search.cc
branches/ssgnc-0.2.0/src/ssgnc/: ngram.h  unified-db.h  unified-reader.h
branches/ssgnc-0.2.0/test/: test-answer  test-build.sh
branches/ssgnc-0.2.1/: Makefile.am  configure.ac
branches/ssgnc-0.2.1/src/: encode-text.cc
branches/ssgnc-0.2.1/src/ssgnc/: text-encoder.h
branches/ssgnc-0.2.2/: Makefile.in  configure.ac  ssgnc-gen-cgi-with-wakati.pl  ssgnc-gen-cgi.pl
branches/ssgnc-0.2.2/src/: sort-data.cc
branches/ssgnc-0.2.2/test/: Makefile.in  test-query  test-search.sh
branches/ssgnc-0.3.0/: Makefile.in  configure  configure.ac
branches/ssgnc-0.3.0/html/: ssgnc-en-help.html
branches/ssgnc-0.3.0/lib/: Makefile.am  Makefile.in  back-divider.cc  back-merger.cc  front-merger.cc  line-parser.cc  memory-pool.cc  parsed-line.cc  temp-file.cc  vocab-dic.cc  vocab-indexer.cc
branches/ssgnc-0.3.0/src/: Makefile.in  freq-to-id.cc  search.cc
branches/ssgnc-0.3.0/test/: Makefile.am  test-build.sh
branches/ssgnc-0.3.0/tool/: Makefile.in  ssgnc-build-index.sh  ssgnc-db-builder.cc
branches/ssgnc-0.4.0/: configure
branches/ssgnc-0.4.0/include/: ssgnc.h
branches/ssgnc-0.4.0/lib/: Makefile.am  Makefile.in
branches/ssgnc-0.4.0/tests/: test-byte-reader.cc  test-freq-handler.cc  test-heap-queue.cc  test-int-types.cc  test-mem-pool.cc  test-string.cc  test-vocab-dic.cc
branches/ssgnc-0.4.0/tools/: Makefile.am  ssgnc-db-merge.cc  ssgnc-db-split.cc  ssgnc-idx-merge.cc  ssgnc-ngms-encode.cc  ssgnc-ngms-merge.cc  tools-common.cc  (+3 more)
branches/ssgnc-0.4.1/: configure  configure.ac
branches/ssgnc-0.4.2/tools/: Makefile.am  ssgnc-build.sh  ssgnc-search.cc
branches/ssgnc-0.4.4/: configure  configure.ac
branches/ssgnc-0.4.4/include/ssgnc/: file-path.h  mem-pool.h
branches/ssgnc-0.4.4/lib/: Makefile.in  agent.cc  file-map.cc
branches/ssgnc-0.4.4/tests/: test-file-map.cc  test-heap-queue.cc  test-ngram-reader.cc  test-reader.cc
branches/ssgnc-0.4.4/tools/: ssgnc-search.cc  ssgnc-vocab-dic-build.cc
branches/ssgnc-0.4.5/: Makefile.am  Makefile.in  README  configure.ac
branches/ssgnc-0.4.6/: Makefile.am  Makefile.in  README
branches/ssgnc-0.4.6/lib/: Makefile.am
branches/ssgnc-0.4.6/search-tools/: Makefile.am  ssgnc-predict.cc  ssgnc-search.cc
branches/ssgnc-0.4.6/tests/: Makefile.am  Makefile.in  test-freq-handler.cc  test-string-builder.cc
build-tools/: Makefile.am  Makefile.in  ssgnc-db-merge.cc  tools-common.h
cgi/: Makefile.am  Makefile.in  config.h  ssgnc-cgi.cc
html/: ngram-ja-help.html  ngram-ja.html  ssgnc-ja-help.html  ssgnc-ja.html
include/ssgnc/: agent.h  back-merger.h  byte-reader.h  exception.h  file-map.h  freq-handler.h  front-encoder.h  heap-queue.h  line-reader.h  memory-pool.h  ngram-reader.h  parsed-line.h  query.h  reader.h  string-builder.h  string-hash.h  string.h  vocab-dic.h  writer.h
lib/: Makefile.in  byte-reader.cc  common.cc  file-map.cc  front-encoder.cc  line-reader.cc  mapper.cc  mem-pool.cc  ngram-index.cc  parsed-line-pool.cc  parsed-line-reader.cc  query.cc  string-builder.cc  vocab-dic.cc
licenses/: License-en.txt
search-tools/: Makefile.am  Makefile.in  ssgnc-search.cc  ssgnc-vocab-dic-lookup.cc
src/: Makefile.am  Makefile.in  build-dic.cc  build-index.cc  build-vocab-index.cc  encode-index.cc  encode-text.cc  search.cc  ssgnc-find.cc
src/ssgnc/: byte-writer.h  client-options.h  db-divider.h  db-filter.h  db-reader.h  encoder.h  fd-streambuf.h  index-finder.h  indexer.h  line-reader.h  ngram.h  path-generator.h  text-finder.h  unified-db.h  varint-writer.h  vocab-dic.h  vocab-index.h
srcs/: byte-reader.h  cgi-config.h  file-mapper.h  index-ngram.cpp  scoped-watch.h  search-engine.h  sort-keys.cpp  sort-vocab.cpp  test.cpp  unit-manager.h  vbe-writer.h
test/: Makefile.in  test-answer  test-line-reader.cc  test-memory-pool.cc
tests/: Makefile.am  Makefile.in  test-file-map.cc  test-file-path.cc  test-freq-handler.cc  test-ngram-index.cc  test-ngram-reader.cc  test-reader.cc  test-string-builder.cc  test-string.cc  test-vocab-dic.cc  test-writer.cc
tool/: Makefile.am  ssgnc-vocab-indexer.cc
tools/: Makefile.in  ssgnc-build.sh  ssgnc-db-merge.cc  ssgnc-idx-merge.cc  ssgnc-ngms-merge.cc  ssgnc-ngms-split.cc  ssgnc-vocab-dic-build.cc  tools-common.cc  tools-common.h
trunk/: Makefile.am  configure  configure.ac  ssgnc-gen-cgi.pl
trunk/build-tools/: ssgnc-db-split.cc  ssgnc-ngms-encode.cc
trunk/cgi/: Makefile.am  ssgnc-cgi.cc
trunk/html/: ssgnc-en.html
trunk/include/: ssgnc.h
trunk/lib/: ngram-reader.cc  writer.cc
trunk/search-tools/: Makefile.in  ssgnc-predict.cc  ssgnc-search.cc  ssgnc-vocab-dic-lookup.cc
trunk/src/: Makefile.in  search.cc
trunk/srcs/: cgi-main.cpp  encode-ngram.cpp  key-reader.h  key-type.h  mem-streambuf.h  simple-client.cpp  sort-ngram.cpp  unit-reader.h  vbe-reader.h
trunk/test/: Makefile.am  test-build.sh
trunk/tests/: test-mem-pool.cc
wiki/: CGIProgram.wiki  Introduction.wiki
wiki/ja/: Introduction.wiki
(+114 files in other folders)
